# themux

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: binary.rs  cli.rs  data.rs  main.rs  style.rs  term_width.c  theme_names.csv  tui.rs  util.rs  utils.rs
