[package]
name = "themux"
version = "0.1.0"
edition = "2021"
authors = ["ryanv404"]
description = "Command-line tool for setting the color theme of a Termux terminal."
repository = "https://github.com/ryanv404/themux"
readme = "README.md"
keywords = ["colors", "themes", "terminal", "termux"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
bincode = "2.0.0-rc.3"
inquire = "0.6.2"
terminal_size = "0.2.6"
