[package]
name = "themux"
version = "0.1.1"
edition = "2021"
authors = ["ryanv404"]
description = "Command-line tool for setting the color theme in a Termux terminal emulator."
repository = "https://github.com/ryanv404/themux"
readme = "./README.md"
license = "MIT"
keywords = ["colors", "style", "themes", "terminal", "termux"]
categories = ["command-line-utilities"]

[build-dependencies]
cc = "1.0"

[dependencies.dialoguer]
version = "0.11.0"
default-features = false
features = ["fuzzy-select"]
